Fixed issues
- gallery main background not showing up on ios - fixed - made
background-attachment scroll (not fixed)
- Copy button not working on ios - FIXED - remove copy button from ios
-Main cover background image adjusting due to mobile address bar - FIXED
added javascript to statically set height of cover-main div once page
loads
-Animated scroll not working properly on ios -FIXED - remove href
content
-Nav bar display issues with button toggler and rings image not aligned
correctly - fixed - made container 100% - added columns to nav-site-top
- made logo wrapper span element a block element and centered logo
-Fix Jessica couple card background position on tablet

--- a/assets/css/jr-styles.css
+++ b/assets/css/jr-styles.css
@@ -8,7 +8,7 @@ html, body{
 
 section{
     margin:0px;
-    min-height: 600px;
+    min-height: 300px;
     /*border: medium solid black;*/
 }
 
@@ -31,6 +31,9 @@ blockquote{
 }
 
 /* ===  HELPER STYLES ===  */
+#top-menu-spacer{
+    min-height: 5px;
+}
 .vertical-align-parent, .horizontal-align-parent{
     position: relative;
 }
@@ -87,6 +90,12 @@ blockquote{
 
 /* === NAV STYLES === */
 
+#navbar-site-top .container{
+    width: 100%;
+}
+#navbar-site-top .container{
+    width: 100%;
+}
 #navbar-site-top .container .row div:first-of-type{
     padding-left: 0px;
 }
@@ -118,6 +127,9 @@ text-decoration-color: grey;
     color: white;
 }
 
+#site-logo-wrapper{
+    display:block;
+}
 
 /* === COVER MAIN STYLES === */
 #cover-main{
@@ -125,13 +137,13 @@ text-decoration-color: grey;
   /* background: url('../img/bg/rings-focused-bg-blurred.jpeg') no-repeat;*/
    background: url('../img/engagement/mr-mrs-both-kiss.jpg') no-repeat;
    background-size: cover;
-   background-position:  -200px 50px;
+   background-position:  -200px 10px;
    padding:0px;
 }
 
  #cover-main{
    
-    height:98%;
+    height:100%;
 }
 #cover-main .container-fluid{
    
@@ -286,6 +298,9 @@ text-decoration-color: grey;
 }
 
 /* === GALLERY SECTION === */
+#gallery-main-1.ios{
+    background-attachment: scroll;
+}
 
 #gallery-main-1 .section-header{
     font-family: 'Tangerine', cursive;
@@ -708,12 +723,20 @@ background-size: cover;
     margin-bottom: 16px;
 }
 
+#dep-notes-copy-btn.ios{
+    display:none;
+}
+
 .success-field{
     border-color: green;
      box-shadow: 10px 10px 5px green;
 }
 
 .deposit-info-display-item{
+    -webkit-box-shadow: 10px 10px 5px #888888;
+    -o-box-shadow: 10px 10px 5px #888888;
+    -ms-box-shadow: 10px 10px 5px #888888;
+    -moz-box-shadow: 10px 10px 5px #888888;
     box-shadow: 10px 10px 5px #888888;
 }
 
@@ -1032,15 +1055,35 @@ background-size: cover;
 
 @media screen and (min-width: 34em)  and (orientation: landscape) {
     #cover-main{
-        background-position: -30px 30px;
+       /* background-position: -30px 30px;*/
+        background-position: 0px 30px;
     }
+
+}
+
+/* Galaxy tab. Above 576em  */
+
+@media screen and (min-width: 576px) {
+    #bride-bg-row{
+       /* background-position: -30px 30px;*/
+        background-position: -80px 0px;
+    }
+   .card .card-sub-subtitle {
+    font-size: 34px;
+    font-family: 'Tangerine', cursive;
+}
+    #groom-info-card h4.section-header {
+        font-size:3.4rem;
+    }
+    
 
 }
 /* iPhone 6. Above  (666px) AND Landscape */
 
 @media screen and (min-width: 666px)  and (orientation: landscape) {
     #cover-main{
-        background-position: -12px 30px;
+       /* background-position: -12px 30px;*/
+        background-position: 0px 30px;
     }
         #groom-info-card .section-header{
         font-size:3.2rem;
@@ -1070,7 +1113,7 @@ background-size: cover;
 }
     
     #cover-main{
-        background-position: -178px 30px;
+        background-position: -178px 0px;
     }
     
        #navbar-site-top a.nav-link{
@@ -1133,6 +1176,10 @@ background-size: cover;
         font-size:3.4rem;
         
     }
+      #bride-bg-row{
+       /* background-position: -30px 30px;*/
+        background-position: 0px 0px;
+    }
     
         #location-info-content{
         padding: 15px;
@@ -1171,7 +1218,8 @@ background-size: cover;
 
 @media screen and (min-width: 768px)  and (orientation: landscape) {
     #cover-main{
-        background-position: -5% 30px;
+       /* background-position: -5% 30px;*/
+      background-position: 0px 30px;
     }
 }
 
@@ -1384,16 +1432,24 @@ background-size: cover;
 /* flip speed goes here */
 .flipper {
 	transition: 0.6s;
-	transform-style: preserve-3d;
+	-webkit-transform-style: preserve-3d;
+	-o-transform-style: preserve-3d;
+	-ms-transform-style: preserve-3d;
+	-moz-transform-style: preserve-3d;
+    transform-style: preserve-3d;
 
 	position: relative;
 }
 
 /* hide back of pane during swap */
 .front, .back {
-	backface-visibility: hidden;
-
-	position: absolute;
+	
+    -moz-backface-visibility: hidden;
+    -o-backface-visibility: hidden;
+	-ms-backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    position: absolute;
 	top: 0;
 	left: 0;
 }
@@ -1402,11 +1458,19 @@ background-size: cover;
 .front {
 	z-index: 2;
 	/* for firefox 31 */
+	-webkit-transform: rotateY(0deg);
+	-o-transform: rotateY(0deg);
+	-ms-transform: rotateY(0deg);
+	-moz-transform: rotateY(0deg);
 	transform: rotateY(0deg);
 }
 
 /* back, initially hidden pane */
 .back {
+    -webkit-transform: rotateY(180deg);
+	-o-transform: rotateY(180deg);
+	-ms-transform: rotateY(180deg);
+	-moz-transform: rotateY(180deg);
 	transform: rotateY(180deg);
 }
 
